<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_prompt" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sampleUserName"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sample_password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:enabled="false"
        android:text="@string/title_activity_login"
        android:textColor="#FFFFFF" />

</LinearLayout>