<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.main.feed.FeedFragment">

    <ImageView
        android:id="@+id/status_user_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/profile_pic_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/status_user_image"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dividing_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/dividing_line"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sampleAlias"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/time_posted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date_format"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/status_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/loadingData"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>