<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">


    <TextView
        android:id="@+id/username_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_prompt"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/username_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sampleUserName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="35dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sample_password"
        android:inputType="textPassword"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="115dp"
        tools:targetApi="o" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="160dp" />

    <TextView
        android:id="@+id/first_name_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_prompt"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="176dp" />

    <EditText
        android:id="@+id/first_name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="195dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="240dp" />

    <TextView
        android:id="@+id/last_name_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_prompt"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="256dp" />

    <EditText
        android:id="@+id/last_name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textShortMessage"
        tools:layout_conversion_absoluteHeight="45dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="275dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="320dp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_pic_prompt"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="320dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:editable="false"
        android:text="@string/register_prompt"
        android:textColor="#FFFFFF"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="336dp" />


</LinearLayout>