<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.main.PostStatusActivity">

    <TextView
        android:id="@+id/post_status_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:padding="6dp"
        android:paddingBottom="12dp"
        android:text="@string/post_status_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F9F9F9" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/message_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/status_message_prompt"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/status_message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="10" />

    <Button
        android:id="@+id/post_status_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_prompt" />

</LinearLayout>