<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.view.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

<<<<<<< Updated upstream
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

=======
>>>>>>> Stashed changes
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:contentDescription="@string/userImageContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_toEndOf="@+id/userImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_hint"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleAlias"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
<<<<<<< Updated upstream
=======

>>>>>>> Stashed changes
                    <TextView
                        android:id="@+id/followeeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
<<<<<<< Updated upstream
                        android:text="@string/followeeCount"
                        android:paddingHorizontal="5sp"/>

                    <Space
                        android:layout_width="5sp"
                        android:layout_height="wrap_content"/>
=======
                        android:paddingHorizontal="5sp"
                        android:text="@string/followeeCount" />

                    <Space
                        android:layout_width="5sp"
                        android:layout_height="wrap_content" />
>>>>>>> Stashed changes

                    <TextView
                        android:id="@+id/followerCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
<<<<<<< Updated upstream
                        android:text="@string/followerCount"
                        android:paddingHorizontal="5sp"/>
=======
                        android:paddingHorizontal="5sp"
                        android:text="@string/followerCount" />
>>>>>>> Stashed changes

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="6dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#E91E63"
        app:srcCompat="@android:drawable/ic_menu_add" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>